--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,99 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    app:layoutDescription="@xml/activity_main_scene"
     tools:context=".MainActivity">
+
     <ImageView
         android:id="@+id/icon_1"
         android:layout_width="130dp"
         android:layout_height="130dp"
+
         android:scaleType="center"
         android:src="@drawable/cameraretro"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:padding="10dp"/>
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ImageView
         android:id="@+id/icon_2"
         android:layout_width="130dp"
         android:layout_height="130dp"
+        android:padding="10dp"
         android:scaleType="center"
         android:src="@drawable/gopuram"
         app:layout_constraintLeft_toRightOf="@id/icon_1"
-        app:layout_constraintTop_toTopOf="parent"
-        android:padding="10dp"/>
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ImageView
         android:id="@+id/icon_3"
         android:layout_width="130dp"
         android:layout_height="130dp"
+        android:padding="10dp"
         android:scaleType="center"
-        android:src="@drawable/gopuram"
+        android:src="@drawable/telegramplane"
         app:layout_constraintLeft_toRightOf="@id/icon_2"
-        app:layout_constraintTop_toTopOf="parent"
-        android:padding="10dp"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/icon_4"
         android:layout_width="130dp"
         android:layout_height="130dp"
+        android:padding="10dp"
         android:scaleType="center"
         android:src="@drawable/instagram"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/icon_1"
-        android:padding="10dp"/>
+        app:layout_constraintTop_toBottomOf="@id/icon_1" />
+
     <ImageView
         android:id="@+id/icon_5"
         android:layout_width="130dp"
         android:layout_height="130dp"
+        android:padding="10dp"
         android:scaleType="center"
         android:src="@drawable/phoenixframework"
         app:layout_constraintLeft_toRightOf="@id/icon_4"
-        app:layout_constraintTop_toBottomOf="@id/icon_1"
-        android:padding="10dp"/>
+        app:layout_constraintTop_toBottomOf="@id/icon_1" />
+
     <ImageView
         android:id="@+id/icon_6"
         android:layout_width="130dp"
         android:layout_height="130dp"
+        android:padding="10dp"
         android:scaleType="center"
         android:src="@drawable/projectdiagram"
         app:layout_constraintLeft_toRightOf="@id/icon_5"
         app:layout_constraintTop_toBottomOf="@id/icon_1"
-        android:padding="10dp"/>
+        app:srcCompat="@drawable/wifi" />
+
     <ImageView
         android:id="@+id/icon_7"
         android:layout_width="130dp"
         android:layout_height="130dp"
+        android:padding="10dp"
         android:scaleType="center"
         android:src="@drawable/telegram"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/icon_4"
-        android:padding="10dp"/>
+        app:layout_constraintTop_toBottomOf="@id/icon_4" />
+
     <ImageView
         android:id="@+id/icon_8"
         android:layout_width="130dp"
         android:layout_height="130dp"
+        android:padding="10dp"
         android:scaleType="center"
         android:src="@drawable/projectdiagram"
         app:layout_constraintLeft_toRightOf="@id/icon_7"
         app:layout_constraintTop_toBottomOf="@id/icon_4"
-        android:padding="10dp"/>
+        app:srcCompat="@drawable/tram" />
+
     <ImageView
         android:id="@+id/icon_9"
         android:layout_width="130dp"
         android:layout_height="130dp"
+        android:padding="10dp"
         android:scaleType="center"
         android:src="@drawable/projectdiagram"
         app:layout_constraintLeft_toRightOf="@id/icon_8"
-        app:layout_constraintTop_toBottomOf="@id/icon_4"
-        android:padding="10dp"/>
+        app:layout_constraintTop_toBottomOf="@id/icon_4" />
+
     <View
         android:id="@+id/view"
         android:layout_width="64dp"
         android:layout_height="64dp"
+        android:background="@drawable/expand"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:background="@drawable/expand"/>
+        app:layout_constraintRight_toRightOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.motion.widget.MotionLayout>
